--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -31,6 +31,7 @@
             android:layout_height="50dp"
             android:hint="Enter Barcode (Optional)"
             android:textSize="16sp"
+            android:textColor="@color/black"
             android:padding="12dp"
             android:background="@drawable/input_background"/>
 
