--- a/app/src/main/res/menu/menu_product_search.xml
+++ b/app/src/main/res/menu/menu_product_search.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Settings (Ellipsis icon for settings) -->
+    <!-- Settings -->
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/ic_more_vert"
+        android:icon="@drawable/ic_info"
         android:title="Settings"
         app:showAsAction="never" />
 
@@ -23,4 +23,12 @@
         android:icon="@drawable/ic_privacy"
         app:showAsAction="never" />
 
+    <!-- Logout -->
+    <item
+        android:id="@+id/action_logout"
+        android:title="Logout"
+        android:icon="@drawable/ic_logout"
+        app:showAsAction="never" />
+
 </menu>
+
