--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!-- Logout Option -->
     <item
-        android:id="@+id/menu_toggle_theme"
-        android:title="Toggle Light/Dark Mode"
-        android:icon="@drawable/ic_dark_mode"
+        android:id="@+id/action_logout"
+        android:title="Logout"
+        android:icon="@drawable/ic_logout"
         app:showAsAction="never" />
 
 </menu>
