--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
         <color name="purple_100">#F3E5F5</color>
         <color name="white">#FFFFFF</color>
         <color name="black">#000000</color>
+        <color name="blue">#03A9F4</color>
+
 
         <!-- Secondary Colors -->
         <color name="colorSecondary">#03DAC5</color>
