Fixed menu actions

--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -71,7 +71,8 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"/>
+        android:contentDescription="@string/api_response_will_appear_here"
+        android:padding="8dp" />
 
 </LinearLayout>
 
