--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,11 +30,12 @@
         android:id="@+id/etApiKey"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:background="@drawable/input_background"
         android:hint="Enter ePOSNow API Key"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:textColorHint="#757575"
+        android:textColorHint="#546E7A"
         android:textSize="14sp"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -50,11 +51,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:autofillHints=""
             android:background="@drawable/input_background"
             android:hint="Enter ePOSNow API Secret"
             android:inputType="textPassword"
             android:padding="12dp"
-            android:textColorHint="#757575"
+            android:textColorHint="#546E7A"
             android:textSize="14sp"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -66,6 +68,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="TODO"
             android:src="@drawable/ic_eye"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
     </LinearLayout>
@@ -76,13 +79,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:autofillHints=""
         android:background="@drawable/input_background"
         android:hint="Enter Location ID"
         android:inputType="number"
         android:padding="12dp"
-        android:textColorHint="#757575"
         android:textSize="14sp"
-        tools:ignore="TouchTargetSizeCheck" />
+        tools:ignore="TouchTargetSizeCheck"
+        android:textColorHint="#546E7A"/>
 
     <CheckBox
         android:id="@+id/checkboxRememberMeAPI"
