--- a/app/src/main/res/layout/activity_membership_login.xml
+++ b/app/src/main/res/layout/activity_membership_login.xml
@@ -4,8 +4,8 @@
     android:padding="16dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
@@ -15,6 +15,7 @@
     <ImageView
         android:layout_width="120dp"
         android:layout_height="120dp"
+        android:contentDescription="The Easy Inventory Logo"
         android:src="@drawable/logo"
         android:layout_marginBottom="16dp"/>
 
@@ -37,12 +38,14 @@
         style="?android:attr/progressBarStyleLarge"/>
 
     <!-- Email Input -->
-    <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:minHeight="48dp" />
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            android:textColorHint="#546E7A" />
 
     <!-- Password Input -->
     <EditText
@@ -51,7 +54,8 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:inputType="textPassword"
-        android:minHeight="48dp" />
+        android:minHeight="48dp"
+        android:textColorHint="#546E7A"/>
 
     <CheckBox
         android:id="@+id/checkboxRememberMe"
@@ -88,7 +92,7 @@
             android:minHeight="48dp"
             android:padding="8dp"
             android:text="Don't have an account? Sign up"
-            android:textColor="@color/blue"
+            android:textColor="#0091EA"
             android:textSize="14sp"
             android:textStyle="bold" />
 
@@ -103,7 +107,7 @@
             android:minHeight="48dp"
             android:padding="8dp"
             android:text="Forgot Password?"
-            android:textColor="@color/blue"
+            android:textColor="#0091EA"
             android:textSize="14sp"
             android:textStyle="bold" />
 
@@ -122,15 +126,16 @@
         android:id="@+id/tvTermsOfService"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Terms of Service"
-        android:textColor="@color/blue"
-        android:textSize="14sp"
-        android:textStyle="bold"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:clickable="true"
         android:focusable="true"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"/>
+        android:minHeight="48dp"
+        android:text="Terms of Service"
+        android:textColor="#0091EA"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 </RelativeLayout>
 
 
