--- a/app/src/main/res/layout/activity_user_agreement.xml
+++ b/app/src/main/res/layout/activity_user_agreement.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
         android:elevation="4dp" />
 
     <WebView
