--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_toggle_theme"
-        android:title="Toggle Light/Dark Mode"
+        android:title="Light/Dark Mode"
         android:icon="@drawable/ic_dark_mode"
         app:showAsAction="never" />
+
+    <!-- User Agreement -->
+    <item
+        android:id="@+id/action_user_agreement"
+        android:title="User Agreement"
+        android:icon="@drawable/ic_document"
+        app:showAsAction="never"/>
+
+    <!-- Privacy Policy -->
+    <item
+        android:id="@+id/action_privacy_policy"
+        android:title="Privacy Policy"
+        android:icon="@drawable/ic_privacy"
+        app:showAsAction="never"/>
+
+    <!-- Logout Option -->
+    <item
+        android:id="@+id/action_logout"
+        android:title="Logout"
+        android:icon="@drawable/ic_logout"
+        app:showAsAction="never" />
+
 
 </menu>
