--- a/app/src/main/res/menu/menu_product_search.xml
+++ b/app/src/main/res/menu/menu_product_search.xml
@@ -4,30 +4,14 @@
     <!-- Settings -->
     <item
         android:id="@+id/action_settings"
+        android:icon="@drawable/baseline_info_24"
         android:title="Settings"
-        android:icon="@drawable/ic_settings"
-        app:showAsAction="never"/>
+        android:visible="true"
+        app:showAsAction="always" />
 
-    <!-- User Agreement -->
-    <item
-        android:id="@+id/action_user_agreement"
-        android:title="User Agreement"
-        android:icon="@drawable/ic_document"
-        app:showAsAction="never"/>
 
-    <!-- Privacy Policy -->
-    <item
-        android:id="@+id/action_privacy_policy"
-        android:title="Privacy Policy"
-        android:icon="@drawable/ic_privacy"
-        app:showAsAction="never"/>
 
-    <!-- Logout -->
-    <item
-        android:id="@+id/action_logout"
-        android:title="Logout"
-        android:icon="@drawable/ic_logout"
-        app:showAsAction="never"/>
+
 </menu>
 
 
