--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,11 +19,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/trade_winds"
         android:text="Easy Inventory"
-        android:textSize="20sp"
-        android:textStyle="bold"
+
         android:textColor="@color/black"
-        android:layout_marginBottom="20dp"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <!-- ✅ API Key Input -->
     <EditText
