--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+
     <item
         android:id="@+id/menu_toggle_theme"
         android:title="Light/Dark Mode"
@@ -20,6 +23,14 @@
         android:title="Privacy Policy"
         android:icon="@drawable/ic_privacy"
         app:showAsAction="never"/>
+
+    <!-- Add the "About" button between Privacy Policy and Logout in menu_main.xml -->
+    <item
+        android:id="@+id/action_about"
+        android:title="About"
+        android:icon="@drawable/ic_info"
+        app:showAsAction="never" />
+
 
     <!-- Logout Option -->
     <item
