--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,8 +22,7 @@
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/trade_winds"
         android:text="Easy Inventory"
-
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
         android:textSize="20sp"
         android:textStyle="bold" />
 
