--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -10,7 +10,7 @@
     <!-- ✅ Toolbar with Ellipsis Menu -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/pd_toolbar"
-        android:layout_width="372dp"
+        android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
@@ -28,14 +28,15 @@
         <EditText
             android:id="@+id/etBarcode"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/input_background"
             android:hint="Enter Barcode (Optional)"
-            android:textColorHint="#546E7A"
-            android:textSize="16sp"
-            android:textColor="@color/black"
+            android:inputType="number"
             android:padding="12dp"
-            android:background="@drawable/input_background"/>
+            android:textColor="@color/black"
+            android:textColorHint="#757575"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btnSearchProduct"
@@ -45,7 +46,7 @@
             android:textSize="16sp"
             android:background="@drawable/button_background"
             android:textColor="@color/white"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginStart="8dp"/>
     </LinearLayout>
 
     <!-- ✅ ProgressBar (Hidden Initially) -->
