--- a/app/src/main/res/layout/activity_terms_of_service.xml
+++ b/app/src/main/res/layout/activity_terms_of_service.xml
@@ -15,9 +15,15 @@
         app:titleTextColor="@android:color/white"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_margin="16dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="6dp"
@@ -32,4 +38,3 @@
 
     </androidx.cardview.widget.CardView>
 </LinearLayout>
-
