--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     
     <!-- App Theme -->
 
-        <style name="Theme.EasyInventory" parent="Theme.Material3.Light.NoActionBar">
+        <style name="Theme.EasyInventory" parent="Theme.Material3.DayNight.NoActionBar">
             <!-- Primary Colors -->
             <item name="colorPrimary">@color/colorPrimary</item>
             <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
