--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -13,10 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
-        app:title="Inventory Update"
-        app:titleMarginStart="100dp"
-        app:titleTextColor="@android:color/white" />
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:title="Inventory Update" />
 
     <!-- ✅ Search Bar & Search Button -->
     <LinearLayout
@@ -26,7 +24,7 @@
         android:layout_marginTop="12dp">
 
         <EditText
-            android:id="@+id/etBarcode"
+            android:id="@+id/etSearch"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -38,15 +36,16 @@
             android:textColorHint="#757575"
             android:textSize="16sp" />
 
+
         <Button
-            android:id="@+id/btnSearchProduct"
+            android:id="@+id/btnSearch"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:text="Search"
-            android:textSize="16sp"
-            android:background="@drawable/button_background"
-            android:textColor="@color/white"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginTop="8dp"
+            android:backgroundTint="@color/purple_500"
+            android:textColor="@android:color/white"/>
+
     </LinearLayout>
 
     <!-- ✅ ProgressBar (Hidden Initially) -->
