--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,80 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="@color/background_light">
+    android:padding="16dp">
 
-    <!-- Toolbar -->
+    <!-- Toolbar with Back Button -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:layout_height="wrap_content"
+        android:background="@color/purple_500"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:title="Settings"
-        app:titleTextColor="@android:color/white" />
+        app:navigationIcon="@drawable/ic_back_arrow" />
 
-    <!-- Theme Toggle Switch -->
+    <!-- Theme Switch -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dark Mode"
-        android:padding="16dp" />
+        android:layout_marginTop="20dp" />
 
-    <!-- Clickable Text Links (Left Aligned) -->
-    <TextView
-        android:id="@+id/tvUserAgreement"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:clickable="true"
-        android:focusable="true"
-        android:minHeight="48dp"
-        android:paddingTop="16dp"
-        android:text="User Agreement"
-        android:textColor="@color/blue" />
-
-    <TextView
-        android:id="@+id/tvPrivacyPolicy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:clickable="true"
-        android:focusable="true"
-        android:minHeight="48dp"
-        android:paddingTop="8dp"
-        android:text="Privacy Policy"
-        android:textColor="@color/blue" />
-
+    <!-- About TextView -->
     <TextView
         android:id="@+id/tvAbout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:clickable="true"
-        android:focusable="true"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
-        android:paddingTop="8dp"
+        android:layout_marginTop="20dp"
         android:text="About"
-        android:textColor="@color/blue" />
+        android:textColor="@color/purple_500"
+        android:textSize="18sp"
+        android:padding="10dp" />
 
-    <!-- Spacer to push logout button to the bottom -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+    <!-- Privacy Policy TextView -->
+    <TextView
+        android:id="@+id/tvPrivacyPolicy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Privacy Policy"
+        android:textColor="@color/purple_500"
+        android:textSize="18sp"
+        android:padding="10dp" />
 
-    <!-- Logout Button at the Bottom -->
+    <!-- Terms of Service TextView -->
+    <TextView
+        android:id="@+id/tvTermsOfService"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Terms of Service"
+        android:textColor="@color/purple_500"
+        android:textSize="18sp"
+        android:padding="10dp" />
+
+    <!-- User Agreement TextView -->
+    <TextView
+        android:id="@+id/tvUserAgreement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="User Agreement"
+        android:textColor="@color/purple_500"
+        android:textSize="18sp"
+        android:padding="10dp" />
+
+    <!-- Logout Button -->
     <Button
         android:id="@+id/btnLogout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Logout"
+        android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white"
-        android:backgroundTint="@color/red"
-        android:layout_marginTop="16dp" />
+        android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
