--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -21,7 +21,7 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/tvTotalCost"
+        android:id="@+id/tvPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Total Cost: $0.00"
